--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "daisyui": "^2.37.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.4.18",
     "postcss-advanced-variables": "^3.0.1",
     "postcss-import": "^15.0.0",
